--- a/Company.G03.PL/Views/Department/Details.cshtml
+++ b/Company.G03.PL/Views/Department/Details.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Department Details</h1>
 
-<div class="mt-5 mb-5">
+<div class="my-5">
     <div class="form-floating mb-3">
         <input type="text" asp-for="Code" class="form-control" placeholder="Code" readonly />
         <label asp-for="Code"></label>
