--- a/Company.G03.PL/Views/Department/Index.cshtml
+++ b/Company.G03.PL/Views/Department/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h1 class="mt-5">All Departments</h1>
 
-<div class="mt-5 mb-5">
+<div class="my-5">
     <a asp-action="Create" asp-controller"Department" class="btn btn-primary">Create Department</a>
 </div>
 
@@ -32,17 +32,7 @@
                         <td>@department.Name</td>
                         <td>@department.CreatedAt</td>
 
-                        <td>
-                            <a asp-action="Details" asp-controller="Department" asp-route-id="@department.Id" class="btn btn-info">Details</a>
-                        </td>
-
-                        <td>
-                            <a asp-action="Edit" asp-controller="Department" asp-route-id="@department.Id" class="btn btn-warning">Edit</a>
-                        </td>
-
-                        <td>
-                            <a asp-action="Delete" asp-controller="Department" asp-route-id="@department.Id" class="btn btn-danger">Delete</a>
-                        </td>
+                        <partial name="_ButtonsPartialView" model="@department.Id"/>
 
                     </tr>
                     }
