--- a/Company.G03.PL/Views/Employee/Details.cshtml
+++ b/Company.G03.PL/Views/Employee/Details.cshtml
@@ -10,55 +10,31 @@
     <div class="form-floating mb-3">
         <input type="text" asp-for="Name" class="form-control" placeholder="Name" readonly />
         <label asp-for="Name"></label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="Name"></span>
-        </div>
     </div>
 
     <div class="form-floating mb-3">
         <input type="text" asp-for="Age" class="form-control" placeholder="Age" readonly />
         <label asp-for="Age"></label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="Age"></span>
-        </div>
     </div>
 
     <div class="form-floating mb-3">
-        <input asp-for="Email" class="form-control" placeholder="Email" readonly/>
+        <input asp-for="Email" class="form-control" placeholder="Email" readonly />
         <label asp-for="Email">Email</label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="Email"></span>
-        </div>
     </div>
 
     <div class="form-floating mb-3">
         <input type="text" asp-for="Address" class="form-control" placeholder="Address" readonly />
         <label asp-for="Address"></label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="Address"></span>
-        </div>
     </div>
 
     <div class="form-floating mb-3">
         <input type="text" asp-for="Phone" class="form-control" placeholder="Phone" readonly />
         <label asp-for="Phone"></label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="Phone"></span>
-        </div>
     </div>
 
     <div class="form-floating mb-3">
         <input type="text" asp-for="Salary" class="form-control" placeholder="Salary" readonly />
         <label asp-for="Salary"></label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="Salary"></span>
-        </div>
     </div>
 
     <div class="d-flex justify-content-start align-items-center mb-3">
@@ -74,22 +50,32 @@
     <div class="form-floating mb-3">
         <input asp-for="HiringDate" class="form-control" placeholder="HiringDate" disabled />
         <label asp-for="HiringDate"></label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="Age"></span>
-        </div>
     </div>
+
     <div class="form-floating mb-3">
         <input asp-for="CreatedAt" class="form-control" placeholder="CreatedAt" disabled />
         <label asp-for="CreatedAt"></label>
-
-        <div class="my-3">
-            <span class="alert-danger" asp-validation-for="CreatedAt"></span>
-        </div>
     </div>
+    @if (Model.Department !=null)
+        {
+        <div class="form-floating mb-3">
+            <input asp-for="Department.Name" class="form-control" placeholder="Department" disabled />
+            <label asp-for="Department.Name">Department</label>
+        </div>
+        }
+    else
+        {
+        <div class="form-floating mb-3">
+            <input class="form-control" value="N/A" placeholder="N/A" disabled />
+            <label>Department</label>
+        </div>
+        }
+
+
 
     <div>
         <a asp-action="Index" asp-controller="Employee" class="btn btn-secondary">Back to List</a>
     </div>
+
 </div>
 
