--- a/Company.G03.PL/Views/Shared/_ButtonsPartialView.cshtml
+++ b/Company.G03.PL/Views/Shared/_ButtonsPartialView.cshtml
@@ -1,13 +1,13 @@
 ﻿@model int
 
 <td>
-    <a asp-action="Details" asp-controller="Employee" asp-route-id="@Model" class="btn btn-info">Details</a>
+    <a asp-action="Details" asp-route-id="@Model" class="btn btn-info">Details</a>
 </td>
 
 <td>
-    <a asp-action="Edit" asp-controller="Employee" asp-route-id="@Model" class="btn btn-warning">Edit</a>
+    <a asp-action="Edit"  asp-route-id="@Model" class="btn btn-warning">Edit</a>
 </td>
 
 <td>
-    <a asp-action="Delete" asp-controller="Employee" asp-route-id="@Model" class="btn btn-danger">Delete</a>
+    <a asp-action="Delete"  asp-route-id="@Model" class="btn btn-danger">Delete</a>
 </td>
