--- a/Company.G03.PL/Views/Employee/Edit.cshtml
+++ b/Company.G03.PL/Views/Employee/Edit.cshtml
@@ -6,11 +6,11 @@
 <h1>Edit Department</h1>
 
 <div class="mt-5 mb-5">
-    <form asp-action="Edit">
+    <form asp-action="Edit" enctype="multipart/form-data">
 
         <partial name="EmployeePartialView/_CreateEditPrtialView" />
 
-
+        <input asp-for="ImageName" hidden/>
         <div>
             <input type="submit" value="Edit" class="btn btn-primary" />
             <a asp-action="Index" asp-controller="Employee" class="btn btn-secondary">Back to List</a>
