--- a/Company.G03.PL/Views/Employee/EmployeePartialView/_CreateEditPrtialView.cshtml
+++ b/Company.G03.PL/Views/Employee/EmployeePartialView/_CreateEditPrtialView.cshtml
@@ -96,3 +96,8 @@
         <span class="alert-danger" asp-validation-for="CreatedAt"></span>
     </div>
 </div>
+
+<div class="my-3">
+    <label asp-for="Image" class="col-form-control"></label>
+    <input asp-for="Image" class="form-control"/>
+</div>
