--- a/Company.G03.PL/Views/Employee/Create.cshtml
+++ b/Company.G03.PL/Views/Employee/Create.cshtml
@@ -8,7 +8,7 @@
 
 <div class="my-5">
 
-    <form asp-action="Create">
+    <form asp-action="Create" enctype="multipart/form-data">
 
         <partial name="EmployeePartialView/_CreateEditPrtialView" />
 
