--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
     </header>
 
                        @* Body *@
-    <div class="container">
+    <div class="container h-100">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -58,6 +58,7 @@
             &copy; 2025 - Company.G03.PL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
