--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -42,15 +42,14 @@
                 </div>
             </div>
         </nav>
-
     </header>
 
                        @* Body *@
-    <div class="container h-100">
-        <main role="main" class="pb-3">
+    <div class="mx-5 pb-3">
+        <main role="main">
             @RenderBody()
         </main>
-    </div>
+</div>
 
                        @* Footer *@
     <footer class="border-top footer text-muted">
