--- a/Company.G03.PL/Views/Department/Index.cshtml
+++ b/Company.G03.PL/Views/Department/Index.cshtml
@@ -25,12 +25,11 @@
 </div>
 
 
-<div class="">
+<div class="justify-content-center align-items-center text-center overflow-y-auto">
     @if (Model.Count() > 0)
         {
-        <div class="rounded-2">
-
-            <table class="table table-responsive table-hover table-borderless overflow-auto">
+        <div class="h-50">
+            <table class="table table-striped table-hover table-bordered rounded-3">
                 <thead class="bg-info text-center">
                     <tr>
                         <th>#</th>
@@ -47,7 +46,7 @@
 
                     @foreach (var department in Model)
                         {
-                        <tr class="text-center">
+                        <tr class="align-middle text-center">
                             <td>@index</td>
                             <td>@department.Code</td>
                             <td>@department.Name</td>
