--- a/Company.G03.PL/Views/Employee/Index.cshtml
+++ b/Company.G03.PL/Views/Employee/Index.cshtml
@@ -22,15 +22,15 @@
 </form>
 
 <div class="mt-5 mb-5">
-    <a asp-action="Create" asp-controller"Department" class="btn btn-primary">Create an Employee</a>
+    <a asp-action="Create" asp-controller="Department" class="btn btn-primary">Create an Employee</a>
 </div>
 
 
-<div>
+<div class="justify-content-center align-items-center text-center overflow-y-auto">
     @if (Model.Count() > 0)
         {
-        <div class="rounded-2">
-            <table class="table table-hover table-borderless overflow-auto">
+        
+            <table class="table table-striped table-hover table-bordered rounded-3">
                 <thead class="bg-info text-center">
                     <tr>
                         <th>#</th>
@@ -52,40 +52,42 @@
                     </tr>
                 </thead>
 
-                <tbody>
                     @{int index = 1; }
+                <tbody>
                     @foreach (var employee in Model)
                         {
-                        <tr class="text-center">
-                            <td>@index</td>
-                                <td><img src="~/Files/Imgs/@employee.ImageName" class="img-fluid rounded-circle" style="max-width: 100px; max-height: 100px;" /></td>    
-                                <td>@employee.Name</td>
-                                <td>@employee.Age</td>
-                                <td>@employee.Email</td>
-                                <td>@employee.Address</td>
-                                <td>@employee.Phone</td>
-                                <td>@employee.Salary</td>
-                                <td>@employee.IsActive</td>
-                                <td>@employee.IsDeleted</td>
-                                <td>@employee.HiringDate</td>
-                                <td>@employee.CreatedAt</td>
-                                @if (employee.Department != null)
-                                    {
-                                    <td>@employee.Department.Name</td>
-                                    }
-                                else
-                                    {
-                                    <td>N/A</td>
-                                    }
+                        <tr class="align-middle text-center">
+                            <td> @index </td>
+                            <td><img src="~/Files/Imgs/@employee.ImageName" class="img-fluid rounded-circle" style="max-width: 100px; max-height: 100px;" /></td>
+                            <td>@employee.Name</td>
+                            <td>@employee.Age</td>
+                            <td>@employee.Email</td>
+                            <td>@employee.Address</td>
+                            <td>@employee.Phone</td>
+                            <td>@employee.Salary</td>
+                            <td>@employee.IsActive</td>
+                            <td>@employee.IsDeleted</td>
+                            <td>@employee.HiringDate</td>
+                            <td>@employee.CreatedAt</td>
+                            @if (employee.Department != null)
+                                {
+                                <td>@employee.Department.Name</td>
+                                }
+                            else
+                                {
+                                <td>N/A</td>
+                                }
 
-                                <partial name="_ButtonsPartialView" model="@employee.Id" />
+                            <partial name="_ButtonsPartialView" model="@employee.Id" />
 
-                            </tr>
+
+                       </tr>
                         index++;
                         }
-</table>
+                    </tbody>
+            </table>
 
-        </div>
+   
         }
     else
         {
