--- a/Company.G03.PL/Views/Department/DepartmentPartialView/_CreateEditPartialView.cshtml
+++ b/Company.G03.PL/Views/Department/DepartmentPartialView/_CreateEditPartialView.cshtml
@@ -5,7 +5,7 @@
     <label asp-for="Code"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Code"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Code"></span>
     </div>
 
 </div>
@@ -15,7 +15,7 @@
     <label asp-for="Name"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Name"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Name"></span>
     </div>
 
 </div>
@@ -25,7 +25,7 @@
     <label asp-for="CreatedAt">Creation Date</label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="CreatedAt"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="CreatedAt"></span>
     </div>
 
 </div>
