--- a/Company.G03.PL/Views/Employee/EmployeePartialView/_CreateEditPrtialView.cshtml
+++ b/Company.G03.PL/Views/Employee/EmployeePartialView/_CreateEditPrtialView.cshtml
@@ -9,7 +9,7 @@
     <label asp-for="Name"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Name"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Name"></span>
     </div>
 </div>
 
@@ -18,7 +18,7 @@
     <label asp-for="Age"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Age"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Age"></span>
     </div>
 </div>
 
@@ -27,7 +27,7 @@
     <label asp-for="Email">Email</label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Email"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Email"></span>
     </div>
 </div>
 
@@ -36,7 +36,7 @@
     <label asp-for="Address"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Address"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Address"></span>
     </div>
 </div>
 
@@ -45,7 +45,7 @@
     <label asp-for="Phone"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Phone"></span>
+        <span class="bg-transparent border-0 alert alert-dangerr" asp-validation-for="Phone"></span>
     </div>
 </div>
 
@@ -54,7 +54,7 @@
     <label asp-for="Salary"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Salary"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Salary"></span>
     </div>
 </div>
 
@@ -73,7 +73,7 @@
     <label asp-for="HiringDate"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="Age"></span>
+        <span class="bg-transparent border-0 alert alert-dangerr" asp-validation-for="Age"></span>
     </div>
 </div>
 
@@ -82,7 +82,7 @@
     <label asp-for="CreatedAt"></label>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="CreatedAt"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="CreatedAt"></span>
     </div>
 </div>
 
@@ -93,11 +93,11 @@
     </select>
 
     <div class="my-3">
-        <span class="alert-danger" asp-validation-for="CreatedAt"></span>
+        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="CreatedAt"></span>
     </div>
 </div>
 
 <div class="my-3">
-    <label asp-for="Image" class="col-form-control"></label>
-    <input asp-for="Image" class="form-control"/>
+    <label asp-for="Image" class="col-form-control mb-1"></label>
+    <input asp-for="Image" accept="image/*" class="form-control"/>
 </div>
