--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -33,12 +33,18 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
-                        </li> 
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
                         </li>
-
                     </ul>
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="btn btn-danger rounded-3" asp-area="" asp-controller="Account" asp-action="SignOut">Sign Out</a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </nav>
