--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -40,9 +40,23 @@
                     </ul>
 
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="btn btn-danger rounded-3" asp-area="" asp-controller="Account" asp-action="SignOut">Sign Out</a>
-                        </li>
+
+                            @if (User.Identity.IsAuthenticated)
+                                {
+                                <li class="nav-item">
+                                    <a class="nav-link text-success">Hello, @User.Identity.Name!</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="btn btn-danger rounded-3" asp-controller="Account" asp-action="SignOut">Sign Out</a>
+                                </li>
+                                }
+                        else
+                            {
+                            <li class="nav-item">
+                                <a class="btn btn-success rounded-3" asp-controller="Account" asp-action="SignIn">Sign In</a>
+                            </li>
+                            }
                     </ul>
 
                 </div>
