--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
                     <ul class="navbar-nav">
 
-                            @if (User.Identity.IsAuthenticated)
+                            @if (User.Identity?.IsAuthenticated?? false)
                                 {
                                 <li class="nav-item">
                                     <a class="nav-link text-success">Hello, @User.Identity.Name!</a>
