--- a/Company.G03.PL/Views/Account/SignUp.cshtml
+++ b/Company.G03.PL/Views/Account/SignUp.cshtml
@@ -22,7 +22,7 @@
             <input class="text my-4" asp-for="FirstName" placeholder="First Name" required="">
             <input class="text" asp-for="LastName" placeholder="Last Name" required="">
             <input class="text email" asp-for="Email" placeholder="Email" required="">
-            <input class="text" asp-for="Password" placeholder="Password" required="">
+            <input class="text w3lpass" asp-for="Password" placeholder="Password" required="">
             <input class="text w3lpass" asp-for="ConfirmPassword" placeholder="Confirm Password" required="">
             <div class="wthree-text">
                 <label class="anim">
