--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -31,18 +31,33 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
-                        </li>
+
+                        @if (User.Identity?.IsAuthenticated ?? false)
+                            {
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                            </li>
+
+
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+                            </li>
+
+                            }
                     </ul>
 
                     <ul class="navbar-nav">
 
-                            @if (User.Identity?.IsAuthenticated?? false)
-                                {
+                                @if (User.Identity?.IsAuthenticated?? false)
+                                 {
                                 <li class="nav-item">
                                     <a class="nav-link text-success">Hello, @User.Identity.Name!</a>
                                 </li>
@@ -50,13 +65,13 @@
                                 <li class="nav-item">
                                     <a class="btn btn-danger rounded-3" asp-controller="Account" asp-action="SignOut">Sign Out</a>
                                 </li>
-                                }
-                        else
-                            {
+                                 }
+                                else
+                                {
                             <li class="nav-item">
                                 <a class="btn btn-success rounded-3" asp-controller="Account" asp-action="SignIn">Sign In</a>
                             </li>
-                            }
+                                }
                     </ul>
 
                 </div>
