--- a/Company.G03.PL/Views/Employee/EmployeePartialView/_CreateEditPrtialView.cshtml
+++ b/Company.G03.PL/Views/Employee/EmployeePartialView/_CreateEditPrtialView.cshtml
@@ -73,7 +73,7 @@
     <label asp-for="HiringDate"></label>
 
     <div class="my-3">
-        <span class="bg-transparent border-0 alert alert-dangerr" asp-validation-for="Age"></span>
+        <span class="bg-transparent border-0 alert alert-dangerr" asp-validation-for="HiringDate"></span>
     </div>
 </div>
 
@@ -92,9 +92,6 @@
         <option value="@null">Select Department</option>
     </select>
 
-    <div class="my-3">
-        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="CreatedAt"></span>
-    </div>
 </div>
 
 <div class="my-3">
