--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -82,6 +82,8 @@
                        @* Body *@
     <div class="mx-5 pb-3">
         <main role="main">
+            <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
             @RenderBody()
         </main>
 </div>
