--- a/Company.G03.PL/wwwroot/css/AuthStyle.css
+++ b/Company.G03.PL/wwwroot/css/AuthStyle.css
@@ -146,7 +146,11 @@ h1 {
     padding: 3em;
 }
 
-input[type="text"], input[type="email"], input[type="password"] {
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="number"],
+input[type="password"] {
     font-size: 0.9em;
     color: #fff;
     font-weight: 100;
@@ -530,7 +534,7 @@ input.checkbox {
 
 /*-- responsive-design --*/
 @media(max-width:1440px) {
-    input[type="text"], input[type="email"], input[type="password"] {
+    input[type="text"], input[type="email"], input[type="tel"], input[type="number"], input[type="password"] {
         width: 94%;
     }
 }
@@ -586,7 +590,7 @@ input.checkbox {
         width: 58%;
     }
 
-    input[type="text"], input[type="email"], input[type="password"] {
+    input[type="text"], input[type="email"], input[type="tel"], input[type="number"], input[type="password"] {
         width: 93%;
     }
 }
@@ -648,7 +652,7 @@ input.checkbox {
         padding: 1.8em;
     }
 
-    input[type="text"], input[type="email"], input[type="password"] {
+    input[type="text"], input[type="email"], input[type="tel"], input[type="number"], input[type="password"] {
         width: 91%;
     }
 
@@ -724,7 +728,7 @@ input.checkbox {
         margin: 0 0 1em;
     }
 
-    input[type="text"], input[type="email"], input[type="password"] {
+    input[type="text"], input[type="email"], input[type="tel"], input[type="number"], input[type="password"] {
         width: 89.5%;
         font-size: 0.85em;
     }
