--- a/Company.G03.PL/Views/Employee/Index.cshtml
+++ b/Company.G03.PL/Views/Employee/Index.cshtml
@@ -29,7 +29,7 @@
 <div class="justify-content-center align-items-center text-center overflow-y-auto">
     @if (Model.Count() > 0)
         {
-        
+        <div class="h-50">
             <table class="table table-striped table-hover table-bordered rounded-3">
                 <thead class="bg-info text-center">
                     <tr>
@@ -52,7 +52,7 @@
                     </tr>
                 </thead>
 
-                    @{int index = 1; }
+                @{int index = 1; }
                 <tbody>
                     @foreach (var employee in Model)
                         {
@@ -73,7 +73,7 @@
 
                             @if (employee.Department != null)
                                 {
-                                <td >@employee.Department.Name</td>
+                                <td>@employee.Department.Name</td>
                                 }
                             else
                                 {
@@ -81,11 +81,13 @@
                                 }
 
                             <partial name="_ButtonsPartialView" model="@employee.Id.ToString()" />
-                       </tr>
+                        </tr>
                         index++;
                         }
-                    </tbody>
+                </tbody>
             </table>
+        </div>
+           
  
         }
     else
@@ -112,6 +114,7 @@
         data: {Search: searchValue },
         success: function (result) {
             table.html(result);
+            console.log(result);
                 },
         error: function (xhr, status, error) {
             console.log(error);
