--- a/Company.G03.PL/Views/Department/DepartmentPartialView/_DepartmentsTablePartialView.cshtml
+++ b/Company.G03.PL/Views/Department/DepartmentPartialView/_DepartmentsTablePartialView.cshtml
@@ -1,31 +1,43 @@
 ﻿@model IEnumerable<Department>
 
-<table class="table table-striped table-hover table-bordered rounded-3">
-    <thead class="bg-info text-center">
-        <tr>
-            <th>#</th>
-            <th>Code</th>
-            <th>Name</th>
-            <th>Creation Date</th>
-            <th>Details</th>
-            <th>Update</th>
-            <th>Delete</th>
-        </tr>
-    </thead>
-    <tbody>
-        @{int index = 1; }
+@if (Model.Count() > 0)
+    {
+    <div class="h-50">
+        <table class="table table-striped table-hover table-bordered rounded-3">
+            <thead class="bg-info text-center">
+                <tr>
+                    <th>#</th>
+                    <th>Code</th>
+                    <th>Name</th>
+                    <th>Creation Date</th>
+                    <th>Details</th>
+                    <th>Update</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                @{int index = 1; }
 
-        @foreach (var department in Model)
-            {
-            <tr class="align-middle text-center">
-                <td>@index</td>
-                <td>@department.Code</td>
-                <td>@department.Name</td>
-                <td>@department.CreatedAt</td>
+                @foreach (var department in Model)
+                    {
+                    <tr class="align-middle text-center">
+                        <td>@index</td>
+                        <td>@department.Code</td>
+                        <td>@department.Name</td>
+                        <td>@department.CreatedAt</td>
 
-                <partial name="_ButtonsPartialView" model="@department.Id.ToString()" />
+                        <partial name="_ButtonsPartialView" model="@department.Id.ToString()" />
 
-            </tr>
-            index++;
-            }
-</table>
+                    </tr>
+                    index++;
+                    }
+        </table>
+
+    </div>
+    }
+else
+    {
+    <div class="alert alert-info">
+        <p class="h3">There are no departments to display.</p>
+    </div>
+    }
