--- a/Company.G03.PL/Views/Role/Index.cshtml
+++ b/Company.G03.PL/Views/Role/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "All Roles";
 }
 
-<h1 class="mt-5">All Users</h1>
+<h1 class="mt-5">All Roles</h1>
 
 @if (!string.IsNullOrWhiteSpace(TempData["Message"] as string))
     {
@@ -16,7 +16,7 @@
 
 <form class="my-3">
     <div class="d-flex align-items-center justify-content-start">
-        <input name="Search" placeholder="Search by Role name" class="form-control w-50 me-3" />
+        <input name="Search" id="searchInp" placeholder="Search by Role name" class="form-control w-50 me-3" />
         <input type="submit" value="Search" class="btn btn-primary" />
     </div>
 </form>
@@ -66,3 +66,27 @@
         }
 
 </div>
+
+
+<script>
+        $(document).ready(function () {
+        const searchBar = $('#searchInp');
+        const table = $('table');
+
+        searchBar.on('keyup', function (event) {
+            var searchValue = searchBar.val();
+
+        $.ajax({
+            url: '/Role/Search',
+        type: 'Get',
+        data: {Search: searchValue },
+        success: function (result) {
+            table.html(result);
+                },
+        error: function (xhr, status, error) {
+            console.log(error);
+                }
+            });
+        });
+    });
+</script>
