--- a/Company.G03.PL/Views/Role/Edit.cshtml
+++ b/Company.G03.PL/Views/Role/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edit Role";
 }
 
-<h1>Edit User</h1>
+<h1>Edit Role</h1>
 
 <div class="mt-5 mb-5">
     <form asp-action="Edit" enctype="multipart/form-data">
