Minor UI Fix for the Employee img

--- a/Company.G03.PL/Views/Employee/Index.cshtml
+++ b/Company.G03.PL/Views/Employee/Index.cshtml
@@ -58,7 +58,7 @@
                         {
                         <tr class="align-middle text-center">
                             <td> @index </td>
-                            <td><img src="~/Files/Imgs/@employee.ImageName" class="img-thumbnail object-fit-cover rounded-circle" style="max-width: 100px; max-height: 100px;" /></td>
+                            <td><img src="~/Files/Imgs/@employee.ImageName" class="img-thumbnail object-fit-cover rounded-circle" style="max-width: 90px; max-height: 90px; aspect-ratio:1/1" /></td>
 
                             <td>@employee.Name</td>
                             <td>@employee.Age</td>
