--- a/Company.G03.PL/Views/Role/RolePartialView/_CreateEditPrtialView.cshtml
+++ b/Company.G03.PL/Views/Role/RolePartialView/_CreateEditPrtialView.cshtml
@@ -1,11 +1,40 @@
 ﻿@model ReturnRoleDto
+    <div class=" d-flex align-items-center gap-3">
 
 
-<div class="form-floating mb-3">
-    <input type="text" asp-for="Name" class="form-control" placeholder="Name" />
-    <label asp-for="Name"></label>
 
-    <div class="my-3">
-        <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Name"></span>
+        <div class="form-floating w-50 mb-3">
+            <input type="text" asp-for="Name" class="form-control" placeholder="Name" />
+            <label asp-for="Name"></label>
+
+            <div class="my-3">
+                <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="Name"></span>
+            </div>
+        </div>
+
+        <div class="w-50 ms-3">
+
+
+            <h5>Permissions</h5>
+
+            @foreach (var permission in Model.UnassignedPermissions.Concat(Model.AssignedPermissions).Distinct())
+                {
+                var isChecked = Model.AssignedPermissions.Contains(permission);
+                <div class="form-check">
+                    <input type="checkbox"
+                           name="AssignedPermissions"
+                           value="@permission"
+                           class="form-check-input"
+                           @(isChecked ? "checked" : "") />
+                    <label class="form-check-label">@permission</label>
+                </div>
+                }
+
+            <!-- Validation message for AssignedPermissions -->
+            <div class="my-3">
+                <span class="bg-transparent border-0 alert alert-danger" asp-validation-for="AssignedPermissions"></span>
+            </div>
+        
+        </div>
+
     </div>
-</div>
