--- a/Company.G03.PL/Views/User/Index.cshtml
+++ b/Company.G03.PL/Views/User/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ReturnUserDto>
 @{
-    ViewData["Title"] = "All Employees";
+    ViewData["Title"] = "All Users";
 }
 
 <h1 class="mt-5">All Users</h1>
