--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Company.G03.PL.styles.css" asp-append-version="true" />
+    <link rel="icon" href="~/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 
@@ -42,16 +43,18 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link text-danger" asp-area="" asp-controller="User" asp-action="Index">Users</a>
-                            </li>
+                            @if (User.IsInRole("Admin"))
+                                { 
+                                    <li class="nav-item">
+                                        <a class="nav-link text-danger" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                                    </li>
 
 
-                            <li class="nav-item">
-                                <a class="nav-link text-danger" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
-                            </li>
-
+                                    <li class="nav-item">
+                                        <a class="nav-link text-danger" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+                                    </li>
                                 }
+                            }
                     </ul>
 
                     <ul class="navbar-nav">
