UI color changes

--- a/Company.G03.PL/Views/Role/Index.cshtml
+++ b/Company.G03.PL/Views/Role/Index.cshtml
@@ -37,6 +37,9 @@
                     <th>#</th>
                     <th>Id</th>
                     <th>Name</th>
+                    <th>Details</th>
+                    <th>Update</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
 
