--- a/Company.G03.PL/Views/Shared/_Layout.cshtml
+++ b/Company.G03.PL/Views/Shared/_Layout.cshtml
@@ -11,10 +11,11 @@
 </head>
 <body>
 
-                       @* Header *@
-    <header>
-                       @* Nav *@
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+
+    @* Header *@
+    <header class="shadow-lg">
+        @* Nav *@
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom mb-3 rounded-bottom-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Company.G03.PL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -25,56 +26,56 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
 
 
-                        @if (User.Identity?.IsAuthenticated ?? false)
+                        @if ( User.Identity?.IsAuthenticated ?? false )
                             {
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
                             </li>
 
-                            @if (User.IsInRole("Admin"))
-                                { 
-                                    <li class="nav-item">
-                                        <a class="nav-link text-danger" asp-area="" asp-controller="User" asp-action="Index">Users</a>
-                                    </li>
+                            @if ( User.IsInRole("Admin") )
+                                {
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                                </li>
 
 
-                                    <li class="nav-item">
-                                        <a class="nav-link text-danger" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
-                                    </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+                                </li>
                                 }
                             }
                     </ul>
 
                     <ul class="navbar-nav">
 
-                                @if (User.Identity?.IsAuthenticated?? false)
-                                 {
-                                <li class="nav-item">
-                                    <a class="nav-link text-success">Hello, @User.Identity.Name!</a>
-                                </li>
+                        @if ( User.Identity?.IsAuthenticated ?? false )
+                            {
+                            <li class="nav-item">
+                                <a class="nav-link text-success">Hello, @User.Identity.Name!</a>
+                            </li>
 
-                                <li class="nav-item">
-                                    <a class="btn btn-danger rounded-3" asp-controller="Account" asp-action="SignOut">Sign Out</a>
-                                </li>
-                                 }
-                                else
-                                {
+                            <li class="nav-item">
+                                <a class="btn btn-danger rounded-3" asp-controller="Account" asp-action="SignOut">Sign Out</a>
+                            </li>
+                            }
+                        else
+                            {
                             <li class="nav-item">
                                 <a class="btn btn-success rounded-3" asp-controller="Account" asp-action="SignIn">Sign In</a>
                             </li>
-                                }
+                            }
                     </ul>
 
                 </div>
@@ -82,25 +83,31 @@
         </nav>
     </header>
 
-                       @* Body *@
-    <div class="mx-5 pb-3">
-        <main role="main">
-            <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-            @RenderBody()
-        </main>
-</div>
 
-                       @* Footer *@
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - Company.G03.PL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        @* Body *@
+        <div class="mx-5 pb-3">
+            <main role="main">
+                <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+                @RenderBody()
+            </main>
         </div>
-    </footer>
+
+
+
+
+        @* Footer *@
+        <footer class="border-top footer text-muted">
+            <div class="container text-black">
+                &copy; 2025 - Company.G03.PL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
-</html>
+    </html>
