--- a/Company.G03.PL/Views/User/Index.cshtml
+++ b/Company.G03.PL/Views/User/Index.cshtml
@@ -38,6 +38,9 @@
                         <th>Last Name</th>
                         <th>Email</th>
                         <th>Role</th>
+                        <th>Details</th>
+                        <th>Update</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
 
